<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_custom_world</name>
  <version>0.0.0</version>
  <description>Custom TurtleBot3 world and simulation package</description>
  <maintainer email="mariem@example.com">mariem</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Dependencies for C++ nodes -->
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Dependencies for Python nodes -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>numpy</exec_depend>

  <!-- Simulation dependencies -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>

  <!-- Navigation dependencies -->
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Add these lines to explicitly declare executable locations -->
    <ros2run>
      <executable_script>lib/my_custom_world/map_merger</executable_script>
    </ros2run>
  </export>
</package>

